# norma-ntc

./: .gitignore  404.html  CLAUDE.md  DUBBI_NTC18.md  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
actions/bridges/: index.html
actions/combinations/: index.html
actions/fire/: index.html
actions/loads/: index.html
actions/safety/: index.html
actions/seismic/: index.html
actions/snow/: index.html
actions/temperature/: index.html
actions/wind/: index.html
checks/bridges/: index.html
checks/composite/: index.html
checks/concrete/: index.html
checks/existing_buildings/: index.html
checks/geotechnical/: index.html
checks/masonry/: index.html
checks/seismic_bridges/: index.html
checks/seismic_design/: index.html
checks/seismic_foundations/: index.html
checks/seismic_steel/: index.html
checks/seismic_timber/: index.html
checks/steel/: index.html
checks/timber/: index.html
docs/: index.md  traceability.md
docs/actions/: bridges.md  combinations.md  fire.md  loads.md  safety.md  seismic.md  snow.md  temperature.md  wind.md
docs/checks/: bridges.md  composite.md  concrete.md  existing_buildings.md  geotechnical.md  masonry.md  seismic_bridges.md  seismic_design.md  seismic_foundations.md  (+4 more)
examples/: carichi_combinazioni.ipynb  ref_latex.ipynb  verifiche_legno.ipynb  verifiche_taglio.ipynb
orchestrators/: index.html
scripts/: build_vault.py  cda.py  classe_di_attenzione.py
search/: search_index.json
tests/: conftest.py  test_core.py  test_index.py
traceability/: index.html
(+54 files in other folders)
