[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "norma-ntc"
version = "0.2.0"
description = "Python library for structural verification according to NTC 2018 (Italian Building Code)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Raffaele Sestito" },
]
keywords = ["structural-engineering", "ntc18", "building-code", "verification"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
scipy = [
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
